--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -1,7 +1,7 @@
 ARG GO_VERSION=1.19.5
 
 FROM golang:${GO_VERSION}-alpine AS base
-ENV GO111MODULE=off
+ENV GO111MODULE=on
 RUN apk --no-cache add \
     bash \
     build-base \
